cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_10666_infrastructure.yaml
#  Copyright (c) 2025 Cisco Systems Inc or its affiliates.
#
#  All Rights Reserved.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

AWSTemplateFormatVersion: 2010-09-09
Description: NGFWv - AutoScaling Multi-AZ Cluster pre-requisites

Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Cluster Configuration
        Parameters:
          - ClusterName
          - ClusterNumber
          - DeploymentType
          - NoOfAZs
          - ListOfAZs
          - VpcCidr
          - MgmtSubnetNames
          - MgmtSubnetCidrs
          - InsideSubnetNames
          - InsideSubnetCidrs
          - OutsideSubnetNames
          - OutsideSubnetCidrs
          - CCLSubnetNames
          - CCLSubnetCidrs
          - LambdaAZs
          - LambdaSubnetNames
          - LambdaSubnetCidrs
    ParameterLabels:
      ClusterName:
        default: Cluster Name
      ClusterNumber:
        default: Cluster Number
      DeploymentType:
        default: Deployment Type
      VpcCidr:
        default: VPC CIDR
      NoOfAZs:
        default: Number of Availability Zones
      ListOfAZs:
        default: Availability Zone list for launching NGFWvs
      MgmtSubnetNames:
        default: Names of the Management Subnet
      MgmtSubnetCidrs:
        default: Management subnet CIDRs
      InsideSubnetNames:
        default: Name of the Inside Subnet
      InsideSubnetCidrs:
        default: Inside subnet CIDR
      OutsideSubnetNames:
        default: Name of the Outside Subnet
      OutsideSubnetCidrs:
        default: Outside subnet CIDR
      CCLSubnetNames:
        default: Name of the CCL Subnet
      CCLSubnetCidrs:
        default: CCL subnet CIDR
      LambdaAZs:
        default: List of Lambda AZs
      LambdaSubnetNames:
        default: Name of the Lambda Subnets
      LambdaSubnetCidrs:
        default: Lambda Subnet CIDRs

# Condition definitions for resource creation based on deployment type and AZ count
Conditions:
  dualarm: !Equals [ !Ref DeploymentType, "dual-arm" ]
  support1zone: !Equals
    - !Ref NoOfAZs
    - 1
  support3zone: !Equals
    - !Ref NoOfAZs
    - 3
  supportmultizone:
    !Or [
      !Equals [2, !Ref NoOfAZs],
      !Equals [3, !Ref NoOfAZs]
    ]
  dualarmSupportMultiZone: !And [ !Condition "dualarm", !Condition "supportmultizone" ]
  dualarmSupport3Zone: !And [ !Condition "dualarm", !Condition "support3zone" ]

# Input parameters for the template
Parameters:
  ClusterName:
    Description: Enter unique Cluster name
    Type: String
    Default: cluster-infra
    MinLength: 3
    MaxLength: 15
  ClusterNumber:
    Description: Enter unique Cluster number
    Type: Number
    Default: 1
    MinValue: 1
    MaxValue: 99
  DeploymentType:
    Description: >-
      Specify whether "single-arm" or "dual-arm" deployment required.
      NOTE : dual-arm supported for versions 10.0.0 and above ONLY
    Type: String
    Default: "single-arm"
    AllowedValues:
      - "single-arm"
      - "dual-arm"
  VpcCidr:
    Description: Enter the CIDR block for a new VPC
    Type: String
    AllowedPattern: >-
      ^((25[0-5]|2[0-4][0-9]|[1]?[0-9][0-9]?)(\.|\/)){4}([0-9]|[1-2][0-9]|3[0-2])$
    Default: 10.5.0.0/16
  NoOfAZs:
    Description: >-
      Select 2 or 3 Availability Zones (AZs) for releases 7.6.0 and above; for lower releases, Select 1AZ.
      Management, Inside, Outside and CCL subnets will be distributed across the chosen AZs accordingly.
    Type: Number
    AllowedValues:
      - 1
      - 2
      - 3
    Default: 3
  ListOfAZs:
    Description: Select Availability Zones(Count should match with Number of Availability Zones)
    Type: List<AWS::EC2::AvailabilityZone::Name>
  MgmtSubnetNames:
    Description: Management subnets name (With Internet GW as Route)
    Type: CommaDelimitedList
    Default: MgmtSubnet-1,MgmtSubnet-2,MgmtSubnet-3
  MgmtSubnetCidrs:
    Description: Management subnets Cidr list
    Type: CommaDelimitedList
    AllowedPattern: '^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)(,\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)*$'
    Default: 10.5.250.0/27,10.5.251.0/27,10.5.252.0/27
  InsideSubnetNames:
    Description: Inside subnets name (With Private Route)
    Type: CommaDelimitedList
    Default: InsideSubnet-1,InsideSubnet-2,InsideSubnet-3
  InsideSubnetCidrs:
    Description: Inside subnets Cidr list
    Type: CommaDelimitedList
    AllowedPattern: '^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)(,\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)*$'
    Default: 10.5.100.0/27,10.5.101.0/27,10.5.102.0/27
  OutsideSubnetNames:
    Description: Outside subnet name (With Internet GW as Route)  (dual-arm mode only)
    Type: CommaDelimitedList
    Default: OutsideSubnet-1,OutsideSubnet-2,OutsideSubnet-3
  OutsideSubnetCidrs:
    Description: Enter Outside subnets Cidr list (dual-arm mode only)
    Type: CommaDelimitedList
    AllowedPattern: '^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)(,\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)*$'
    Default: 10.5.200.0/27,10.5.201.0/27,10.5.202.0/27
  CCLSubnetNames:
    Description: Enter CCL subnet name
    Type: CommaDelimitedList
    Default: CCLSubnet-1,CCLSubnet-2,CCLSubnet-3
  CCLSubnetCidrs:
    Description: Enter CCL subnet CIDR
    Type: CommaDelimitedList
    AllowedPattern: '^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)(,\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/27)*$'
    Default: 10.5.90.0/27,10.5.91.0/27,10.5.92.0/27
  LambdaAZs:
    Description: Select 2 Availability Zones for Lambda
    Type: List<AWS::EC2::AvailabilityZone::Name>
  LambdaSubnetNames:
    Description: Enter Lambda Subnets name (With NAT GW as Route), for Lambda Functions
    Type: CommaDelimitedList
    Default: LambdaSubnet-1,LambdaSubnet-2
  LambdaSubnetCidrs:
    Description: Enter Lambda Subnet CIDRs
    Type: CommaDelimitedList
    Default: 10.5.50.0/27,10.5.51.0/27

# AWS resources to be created
Resources:
  # VPC and core networking components
  VpcCluster:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'vpc' ] ]

  # Management subnet resources
  subnetMgmt0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['0', !Ref MgmtSubnetCidrs ]
      AvailabilityZone: !Select ['0', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['0', !Ref MgmtSubnetNames ] ] ]
  subnetMgmt1:
    Condition: supportmultizone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['1', !Ref MgmtSubnetCidrs ]
      AvailabilityZone: !Select ['1', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['1', !Ref MgmtSubnetNames ] ] ]
  subnetMgmt2:
    Condition: support3zone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['2', !Ref MgmtSubnetCidrs ]
      AvailabilityZone: !Select ['2', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['2', !Ref MgmtSubnetNames ] ] ]

  # Inside subnet resources for internal network traffic
  subnetInside0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['0', !Ref InsideSubnetCidrs ]
      AvailabilityZone: !Select ['0', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['0', !Ref InsideSubnetNames ] ] ]
  subnetInside1:
    Condition: supportmultizone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['1', !Ref InsideSubnetCidrs ]
      AvailabilityZone: !Select ['1', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['1', !Ref InsideSubnetNames ] ] ]
  subnetInside2:
    Condition: support3zone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['2', !Ref InsideSubnetCidrs ]
      AvailabilityZone: !Select ['2', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['2', !Ref InsideSubnetNames ] ] ]

  # Outside subnet resources for external traffic (dual-arm mode only)
  subnetOutside0:
    Condition: dualarm
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['0', !Ref OutsideSubnetCidrs ]
      AvailabilityZone: !Select ['0', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['0', !Ref OutsideSubnetNames ] ] ]
  subnetOutside1:
    Condition: dualarmSupportMultiZone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['1', !Ref OutsideSubnetCidrs ]
      AvailabilityZone: !Select ['1', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['1', !Ref OutsideSubnetNames ] ] ]
  subnetOutside2:
    Condition: dualarmSupport3Zone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['2', !Ref OutsideSubnetCidrs ]
      AvailabilityZone: !Select ['2', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['2', !Ref OutsideSubnetNames ] ] ]

  # CCL (Cluster Control Link) subnet resources
  subnetCCL0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['0', !Ref CCLSubnetCidrs ]
      AvailabilityZone: !Select ['0', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['0', !Ref CCLSubnetNames ] ] ]
  subnetCCL1:
    Condition: supportmultizone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['1', !Ref CCLSubnetCidrs ]
      AvailabilityZone: !Select ['1', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['1', !Ref CCLSubnetNames ] ] ]
  subnetCCL2:
    Condition: support3zone
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['2', !Ref CCLSubnetCidrs ]
      AvailabilityZone: !Select ['2', !Ref ListOfAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['2', !Ref CCLSubnetNames ] ] ]

  # Lambda function subnet resources
  subnetLambda0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['0', !Ref LambdaSubnetCidrs ]
      AvailabilityZone: !Select ['0', !Ref LambdaAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['0', !Ref LambdaSubnetNames ] ] ]
  subnetLambda1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ['1', !Ref LambdaSubnetCidrs ]
      AvailabilityZone: !Select ['1', !Ref LambdaAZs ]
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, !Select ['1', !Ref LambdaSubnetNames ] ] ]

  # Internet and NAT gateway resources
  igwf952ea9c:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'internet-gw' ] ]
  gw1:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VpcCluster
      InternetGatewayId: !Ref igwf952ea9c
  eipNat:
     Type: AWS::EC2::EIP
     Properties:
        Domain: vpc
  ngwf952ea10:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt eipNat.AllocationId
      SubnetId: !Ref subnetMgmt0
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'nat-gw' ] ]
  dopt3a55d05f:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !Join ['', [!Ref ClusterName, !Ref ClusterNumber, '.compute.internal' ]]
      DomainNameServers:
        - AmazonProvidedDNS
  dchpassoc1:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref VpcCluster
      DhcpOptionsId: !Ref dopt3a55d05f

  # Route tables and routing configuration
  routeTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'with-internet-gw' ] ]
  routeTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'with-nat-gw' ] ]
  routeTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'inside-rt' ] ]
  routeTable4:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'ccl-rt' ] ]

  # Route
  route1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref routeTable1
      GatewayId: !Ref igwf952ea9c
    DependsOn: gw1
  routeNGW:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref routeTable2
      NatGatewayId: !Ref ngwf952ea10

  # Network ACls for Subnets
  aclGeneral:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VpcCluster
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'general-acl']]
  aclGeneralEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref aclGeneral
  aclGeneralIgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref aclGeneral
  aclInside:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VpcCluster
  aclInsideEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref aclInside
  aclInsideIgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: !Ref VpcCidr
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref aclInside

  # NGFWv Subnet ACl
  subnetaclMgmt0:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetMgmt0
  subnetAclInside0:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclInside
      SubnetId: !Ref subnetInside0
  subnetAclOutside0:
    Condition: dualarm
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetOutside0
  CCLAclSubnet0:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclInside
      SubnetId: !Ref subnetCCL0

  subnetaclMgmt1:
    Condition: supportmultizone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetMgmt1
  subnetAclInside1:
    Condition: supportmultizone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclInside
      SubnetId: !Ref subnetInside1
  subnetAclOutside1:
    Condition: dualarmSupportMultiZone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetOutside1
  CCLAclSubnet1:
    Condition: supportmultizone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclInside
      SubnetId: !Ref subnetCCL1

  subnetaclMgmt2:
    Condition: support3zone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetMgmt2
  subnetAclInside2:
    Condition: support3zone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclInside
      SubnetId: !Ref subnetInside2
  subnetAclOutside2:
    Condition: dualarmSupport3Zone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetOutside2
  CCLAclSubnet2:
    Condition: support3zone
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclInside
      SubnetId: !Ref subnetCCL2

  # Lambda Subnet ACl
  subnetAclLambda0:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetLambda0
  subnetAclLambda1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref aclGeneral
      SubnetId: !Ref subnetLambda1

  # Security group definitions
  InstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for NGFWv Instance Management Interface
        VpcId: !Ref VpcCluster
        Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'ftdv-instance-sg1' ] ]
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VpcCidr
          Description: SSH access for management
        - IpProtocol: tcp
          FromPort: 8305
          ToPort: 8305
          CidrIp: !Ref VpcCidr
          Description: Management port for Cisco NGFWv
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref VpcCidr
          Description: All TCP traffic within VPC
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
  InsideInterfaceSGwithGWLB:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for Instances Inside interface (GWLB)
        VpcId: !Ref VpcCluster
        Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'inside-interface-sg' ] ]
        SecurityGroupIngress:
        - IpProtocol: udp
          FromPort: 6081
          ToPort: 6081
          CidrIp: !Ref VpcCidr
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref VpcCidr
        SecurityGroupEgress:
        - IpProtocol: udp
          FromPort: 6081
          ToPort: 6081
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
  OutsideInterfaceSG:
    Condition: dualarm
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for Instances Outside interface
        VpcId: !Ref VpcCluster
        Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'outside-interface-sg' ] ]
        SecurityGroupIngress:
        - IpProtocol: "-1"
          CidrIp: !Ref VpcCidr
        SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
  CCLInterfaceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for Instances CCL interface
        VpcId: !Ref VpcCluster
        Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'CCL-interface-sg' ] ]
        SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcCidr
        SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcCidr
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for Lambda functions
        VpcId: !Ref VpcCluster
        Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'lambda-functions-sg' ] ]
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref VpcCidr
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
  FmcSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for Cisco FMCv device
        VpcId: !Ref VpcCluster
        Tags:
        - Key: Name
          Value: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'fmcv-instance-sg' ] ]
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VpcCidr
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref VpcCidr
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0

  # Public Subnet Route Table Association
  subnetrouteMgmt0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable1
      SubnetId: !Ref subnetMgmt0
  subnetrouteMgmt1:
    Condition: supportmultizone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable1
      SubnetId: !Ref subnetMgmt1
  subnetrouteMgmt2:
    Condition: support3zone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable1
      SubnetId: !Ref subnetMgmt2
  subnetrouteoutside0:
    Condition: dualarm
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable1
      SubnetId: !Ref subnetOutside0
  subnetrouteoutside1:
    Condition: dualarmSupportMultiZone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable1
      SubnetId: !Ref subnetOutside1
  subnetrouteoutside2:
    Condition: dualarmSupport3Zone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable1
      SubnetId: !Ref subnetOutside2

  # Private Subnet Route Table Association
  subnetrouteinside0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable3
      SubnetId: !Ref subnetInside0
  subnetrouteccl:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable4
      SubnetId: !Ref subnetCCL0
  subnetrouteinside1:
    Condition: supportmultizone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable3
      SubnetId: !Ref subnetInside1
  subnetrouteccl1:
    Condition: supportmultizone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable4
      SubnetId: !Ref subnetCCL1
  subnetrouteinside2:
    Condition: support3zone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable3
      SubnetId: !Ref subnetInside2
  subnetrouteccl2:
    Condition: support3zone
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable4
      SubnetId: !Ref subnetCCL2

  # NATed Lambda Subnet Route Table Association
  subnetLambda0Route:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable2
      SubnetId: !Ref subnetLambda0
  subnetLambda1Route:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref routeTable2
      SubnetId: !Ref subnetLambda1

  # S3 bucket for cluster configuration
  S3bucketCluster:
    Type: AWS::S3::Bucket
    DeletionPolicy: Delete
    Properties:
      AccessControl: Private
      PublicAccessBlockConfiguration:
        RestrictPublicBuckets: true
        BlockPublicAcls: true
        IgnorePublicAcls: true
        BlockPublicPolicy: true
      WebsiteConfiguration:
        IndexDocument: index.html

  # Launch template for FMCv (Firepower Management Center Virtual)
  FmclaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    DependsOn:
      - FmcSG
      - subnetMgmt0
    Properties:
      LaunchTemplateName: !Join ['-', [!Ref ClusterName, !Ref ClusterNumber, 'fmc-launch-template' ] ]
      LaunchTemplateData:
        EbsOptimized: false
        InstanceType: c5.4xlarge
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeleteOnTermination: true
            DeviceIndex: 0
            Groups:
              - !Ref FmcSG
            SubnetId: !Ref subnetMgmt0
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              DeleteOnTermination: true
              VolumeSize: 300
        UserData:
          Fn::Base64: !Sub |
            { "AdminPassword": "Cisco123789!", "Hostname": "FMCv" }

# Template outputs
Outputs:
  # Resource identifiers and configuration values
  BucketName:
    Value: !Ref S3bucketCluster
    Description: Name of the Amazon S3 bucket
  BucketUrl:
    Value: !GetAtt S3bucketCluster.WebsiteURL
    Description: URL of S3 Bucket Static Website
  VpcName:
    Description: Name of the VPC created
    Value: !Ref VpcCluster
  ListOfAZs:
    Value: !Join [',', !Ref ListOfAZs]
    Description: Availability zones for NGFWv instances
  MgmtSubnetIds:
    Value: !If
      - support3zone
      - !Join [',', [!Ref subnetMgmt0, !Ref subnetMgmt1, !Ref subnetMgmt2]]
      - !If
        - supportmultizone
        - !Join [',', [!Ref subnetMgmt0, !Ref subnetMgmt1]]
        - !Join [',', [!Ref subnetMgmt0]]
    Description: List of Mangement subnet IDs (comma seperated)
  InsideSubnetIds:
    Value: !If
      - support3zone
      - !Join [',', [!Ref subnetInside0, !Ref subnetInside1, !Ref subnetInside2]]
      - !If
        - supportmultizone
        - !Join [',', [!Ref subnetInside0, !Ref subnetInside1]]
        - !Join [',', [!Ref subnetInside0]]
    Description: List of Inside subnet IDs (comma seperated)
  OutsideSubnetIds:
    Condition: dualarm
    Value: !If
      - dualarmSupport3Zone
      - !Join [',', [!Ref subnetOutside0, !Ref subnetOutside1, !Ref subnetOutside2]]
      - !If
        - dualarmSupportMultiZone
        - !Join [',', [!Ref subnetOutside0, !Ref subnetOutside1]]
        - !Join [',', [!Ref subnetOutside0]]
    Description: List of Outside subnet IDs (comma seperated)
  CCLSubnetIds:
    Value: !If
      - support3zone
      - !Join [',', [!Ref subnetCCL0, !Ref subnetCCL1, !Ref subnetCCL2]]
      - !If
        - supportmultizone
        - !Join [',', [!Ref subnetCCL0, !Ref subnetCCL1]]
        - !Join [',', [!Ref subnetCCL0]]
    Description: List of CCL subnet IDs (comma seperated)
  CCLInterfaceSGId:
    Description:  Security Group ID for CCL Interfaces
    Value: !Ref CCLInterfaceSG
  LambdaSubnetIds:
    Value: !Join [',', [!Ref subnetLambda0, !Ref subnetLambda1 ]]
    Description: List of lambda subnet IDs (comma seperated)
  InstanceSGId:
    Value: !Ref InstanceSG
    Description: Security Group ID for Instances Management Interface
  InInterfaceSGId:
    Description:  Security Group ID for Inside Interfaces
    Value: !Ref InsideInterfaceSGwithGWLB
  OutInterfaceSGId:
    Condition: dualarm
    Description:  Security Group ID for Outside Interfaces
    Value: !Ref OutsideInterfaceSG
  LambdaSecurityGroupId:
    Value: !Ref LambdaSecurityGroup
    Description: Security Group ID for Lambda Functions
  FmcInstanceSGID:
    Value: !Ref FmcSG
    Description: Security Group ID for FMC if user would like to launch in this VPC itself
  EIPforNATgw:
    Value: !Ref eipNat
    Description: EIP reserved for NAT GW
